# i3dr_tools_ros

./: .gitignore  .gitmodules  README.md  build.sh  install.sh
i3dr_tools_ros_WS/build-src-Desktop-Default/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Project.cbp  cmake_install.cmake
i3dr_tools_ros_WS/build-src-Desktop-Default/catkin_generated/: generate_cached_setup.py  order_packages.cmake  order_packages.py  setup_cached.sh
i3dr_tools_ros_WS/build-src-Desktop-Default/devel/: .rosinstall  setup.sh
i3dr_tools_ros_WS/devel/: .catkin  .rosinstall  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
i3dr_tools_ros_WS/devel/.private/gscam/: .catkin  setup.sh  (+1 more)
i3dr_tools_ros_WS/src/i3dr_cameras/i3dr_realsense-ros/: package.xml
i3dr_tools_ros_WS/src/i3dr_cameras/i3dr_realsense-ros/launch/: realsense.launch
i3dr_tools_ros_WS/src/i3dr_cameras/i3dr_realsense-ros/rviz/: realsense_D435i_scene.rviz
i3dr_tools_ros_WS/src/i3dr_cameras/i3dr_realsense-ros/src/: imu_to_tf.cpp
i3dr_tools_ros_WS/src/i3dr_cameras/i3dr_realsense-ros/urdf/: realsense_D435i_scene.urdf.xacro
i3dr_tools_ros_WS/src/i3dr_cameras/i3dr_stereo_camera-ros/: CMakeLists.txt  package.xml
i3dr_tools_ros_WS/src/i3dr_cameras/i3dr_stereo_camera-ros/cfg/: i3DR_Disparity.cfg  tiscamera_settings.cfg
i3dr_tools_ros_WS/src/i3dr_cameras/i3dr_stereo_camera-ros/include/jr/include/PhobosIntegration/: PhobosIntegration.hpp
i3dr_tools_ros_WS/src/i3dr_cameras/i3dr_stereo_camera-ros/include/jr/lib/PhobosIntegration/: PhobosIntegration.lib
i3dr_tools_ros_WS/src/i3dr_cameras/i3dr_stereo_camera-ros/launch/: stereo_calibration.launch  stereo_camera.launch  stereo_capture.launch  stereo_matcher.launch  test_tiscamera.launch
i3dr_tools_ros_WS/src/i3dr_cameras/i3dr_stereo_camera-ros/src/: generate_disparity.cpp  generate_point_cloud.cpp  tiscamera.py  tiscamera_ctrl.py
i3dr_tools_ros_WS/src/i3dr_cameras/i3dr_stereo_camera-ros/urdf/: example_camera.urdf.xacro  i3dr_stereo_camera.urdf.xacro
i3dr_tools_ros_WS/src/i3dr_registration_localisation/i3dr_registration_localisation/: CMakeLists.txt
i3dr_tools_ros_WS/src/i3dr_registration_localisation/i3dr_registration_localisation/launch/: deimos_RTABMAP.launch  rtabmap.launch  slam_all.launch  stereo_localisation.launch  vrep_SLAM.launch
i3dr_tools_ros_WS/src/i3dr_registration_localisation/uno_imu/: CMakeLists.txt  package.xml
i3dr_tools_ros_WS/src/i3dr_registration_localisation/uno_imu/ino/MPU9250_ROS/: MPU9250_ROS.ino
i3dr_tools_ros_WS/src/i3dr_registration_localisation/uno_imu/launch/: deimos_SLAM.launch  imu_filtering.launch  imu_publish.launch  stereo_localisation.launch
i3dr_tools_ros_WS/src/i3dr_registration_localisation/uno_imu/src/: imu_serial.cpp
i3dr_tools_ros_WS/src/i3dr_robot_interface/i3dr_UR10/: CMakeLists.txt  package.xml
i3dr_tools_ros_WS/src/i3dr_robot_interface/i3dr_UR10/launch/: ur10_hand_eye.launch
i3dr_tools_ros_WS/src/i3dr_robot_interface/i3dr_UR10/rviz/: ur10_phobos_nuclear.rviz
i3dr_tools_ros_WS/src/i3dr_robot_interface/i3dr_UR10/src/: i3dr_hand_eye.cpp
i3dr_tools_ros_WS/src/i3dr_robot_interface/i3dr_ur10_qt/: CMakeLists.txt  mainpage.dox  package.xml
i3dr_tools_ros_WS/src/i3dr_robot_interface/i3dr_ur10_qt/include/i3dr_ur10_qt/: main_window.hpp  qnode.hpp
i3dr_tools_ros_WS/src/i3dr_robot_interface/i3dr_ur10_qt/src/: main.cpp  main_window.cpp  qnode.cpp
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_phobos-ros/: package.xml
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_phobos-ros/launch/: hand_eye_calibration.launch  stereo_capture.launch
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_phobos-ros/urdf/: phobos2.urdf.xacro  phobos_scene.urdf.xacro
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_stereo_camera-ros/: .gitattributes  CMakeLists.txt  package.xml
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_stereo_camera-ros/cfg/: i3DR_Disparity.cfg
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_stereo_camera-ros/cmake/: FindPhobos.cmake
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_stereo_camera-ros/include/: iniReader.h  matcherJrsgm.h  matcherjrsgm.h
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_stereo_camera-ros/include/Phobos/Licenses/CUDA/: License.txt
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_stereo_camera-ros/include/Phobos/Licenses/Lapack/: License.txt
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_stereo_camera-ros/include/Phobos/include/PhobosIntegration/: PhobosIntegrationExport.hpp
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_stereo_camera-ros/include/Phobos/lib/: CMakeLists.txt  Licence.txt  NSIS.template.in  libOpenCL.so.1.0.0  libQt5PrintSupport.so.5.5.1  libQt5Sql.so.5.5.1  libQt5Xml.so.5.5.1  libaccinj64.so.9.1  libboost_chrono-gcc54-mt-1_64.so.1.64.0  libboost_date_time-gcc54-mt-1_64.so.1.64.0  libboost_filesystem-gcc54-mt-1_64.so.1.64.0  libboost_program_options-gcc54-mt-1_64.so.1.64.0  libboost_regex-gcc54-mt-1_64.so.1.64.0  libboost_serialization-gcc54-mt-1_64.so.1.64.0  libboost_signals-gcc54-mt-1_64.so.1.64.0  libboost_system-gcc54-mt-1_64.so.1.64.0  libboost_thread-gcc54-mt-1_64.so.1.64.0  libboost_timer-gcc54-mt-1_64.so.1.64.0  libcublas.so.9.1  libcublas.so.9.1.85  libcudart.so.9.1.85  libcufft.so.9.1  libcufft.so.9.1.85  libcufftw.so.9.1  libcufftw.so.9.1.85  libcuinj64.so.9.1  libcurand.so.9.1  libcurand.so.9.1.85  libcusolver.so.9.1  libcusolver.so.9.1.85  libcusparse.so.9.1  libcusparse.so.9.1.85  libgdal.so.20  libgdal.so.20.3.0  libicuio.so.55.1  libicule.so.55.1  libiculx.so.55.1  libicutest.so.55.1  libicutu.so.55.1  libnppc.so.9.1  (+23 more)
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_stereo_camera-ros/launch/: stereo_calibration.launch  stereo_camera.launch  stereo_capture.launch  stereo_matcher.launch
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_stereo_camera-ros/src/: generate_disparity.cpp  iniReader.cpp  matcherJrsgm.cpp  matcherjrsgm.cpp  tiscamera.py
i3dr_tools_ros_WS/src/i3dr_tools-ros/i3dr_cameras/i3dr_stereo_camera-ros/urdf/: i3dr_stereo_camera.urdf.xacro
(+727 files in other folders)
