<?xml version="1.0"?>
<package format="2">
  <name>i3dr_realsense</name>
  <version>0.0.0</version>
  <description>The i3dr_realsense package</description>

  <maintainer email="bknight@i3drobotics.com">Ben Knight</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>realsense2_camera</depend>

</package>
