<?xml version="1.0"?>
<package format="2">

  <name>i3dr_phobos</name>
  <version>0.0.1</version>
  <description>
     An initial driver for I3D robotics' phobos stereo camera. This package
     uses gscam to stream video from two synchronised machine vision cameras.
  </description>

  <maintainer email="jveitch@i3drobotics.com">Josh Veitch-Michaelis</maintainer>
  <author email="jveitch@i3drobotics.com">Josh Veitch-Michaelis</author>
  
  <license>MIT</license>

  <url type="website">http://i3drobotics.com/phobos</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>i3dr_stereo_camera</depend>

</package>
