<?xml version="1.0"?>
<package format="2">

  <name>i3dr_stereo_camera</name>
  <version>0.0.1</version>
  <description>
    Control package for i3dr stereo cameras.
  </description>

  <maintainer email="bknight@i3drobotics.com">Ben Knight</maintainer>
  <author email="bknight@i3drobotics.com">Ben Knight</author>
  
  <license>MIT</license>

  <url type="website">http://i3drobotics.com/</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>camera_info_manager</depend>
  <depend>image_transport</depend>
  <depend>nodelet</depend>
  <depend>sensor_msgs</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher</depend>
  <depend>stereo_image_proc</depend>
  <depend>robot_state_publisher</depend>
  <depend>std_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>pcl_ros</depend>
  <depend>cv_bridge</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
